# nb

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/nb/: __init__.py  factory.py  main.py
tests/: test_main.py
