[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nb"
version = "0.8.0"
description = "NanoBanana CLI and Comic Factory production suite"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google-genai",
    "PyYAML",
]

[project.scripts]
nb = "nb.main:main"
comic-factory = "nb.factory:main"
